k8s/client_nginx/prod/client-web-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: client-prod-svc
  namespace: prod
spec:
  type: NodePort
  selector:
    app: client-deployment
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 80
