k8s/client_nginx/prod/client-web-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: client-prod-ingress
  namespace: prod
  labels:
    tier: prod
    app: client
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: burakovalinfo.xyz
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: client-prod-svc
            port:
              number: 80
